--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -269,5 +269,8 @@
     "fieldvalidation.samværsavtale.forMangeFiler": "Du kan maksimalt laste opp 3 bilder",
     "fieldvalidation.utenlandsopphold_ikke_registrert": "Du har ikke registrert noen utenlandsopphold for perioden",
     "fieldvalidation.utenlandsopphold_overlapper": "Ett eller flere av utenlandsoppholdene har datoer som overlapper",
-    "fieldvalidation.utenlandsopphold_utenfor_periode": "Ett eller flere av utenlandsoppholdene er utenfor tillatt tidsrom"
+    "fieldvalidation.utenlandsopphold_utenfor_periode": "Ett eller flere av utenlandsoppholdene er utenfor tillatt tidsrom",
+    "fieldvalidation.fraværsperioder_mangler": "Du har ikke registrert noen perioder med fullt fravær",
+    "fieldvalidation.fraværsperioder_overlapper": "Ett eller flere av periodene har datoer som overlapper",
+    "fieldvalidation.fraværsperioder_utenfor_periode": "Ett eller flere av periodene er utenfor tillatt tidsrom"
 }
