--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -271,7 +271,7 @@
     "fieldvalidation.utenlandsopphold_overlapper": "Ett eller flere av utenlandsoppholdene har datoer som overlapper",
     "fieldvalidation.utenlandsopphold_utenfor_periode": "Ett eller flere av utenlandsoppholdene er utenfor tillatt tidsrom",
 
-    "fieldvalidation.fraværsperioder_mangler": "Du har ikke lagt til perioder med fullt fravær",
+    "fieldvalidation.fraværsperioder_mangler": "Du har ikke lagt til dager med fullt fravær",
     "fieldvalidation.fraværsperioder_overlapper": "Ett eller flere av periodene har datoer som overlapper",
     "fieldvalidation.fraværsperioder_utenfor_periode": "Ett eller flere av periodene er utenfor tillatt tidsrom",
     "fieldvalidation.dager_med_fravær_ugyldig_dag": "En eller flere av dagene har ugyldige verdier",
