Rename steg 1 til hva-er-din-situasjon

--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -58,15 +58,15 @@
     "step.sendButtonLabel": "Send inn søknaden",
     "step.sendButtonAriaLabel": "Send inn søknaden",
 
-    "step.når-kan-man-få-utbetalt-omsorgspenger.pageTitle": "Når kan man få utbetalt omsorgspenger fra NAV?",
-    "step.når-kan-man-få-utbetalt-omsorgspenger.stepTitle": "Når kan man få utbetalt omsorgspenger fra NAV?",
-    "step.når-kan-man-få-utbetalt-omsorgspenger.stepIndicatorLabel": "Når kan man få utbetalt omsorgspenger fra NAV?",
-    "step.når-kan-man-få-utbetalt-omsorgspenger.counsellorpanel.content": "For å kunne få utbetalt omsorgspenger fra NAV må du totalt ha rett til mer enn 10 dager i kalenderåret",
-    "step.når-kan-man-få-utbetalt-omsorgspenger.tre_eller_fler_barn.spm": "Jeg har 3 eller flere barn",
-    "step.når-kan-man-få-utbetalt-omsorgspenger.alene_om_omsorg_for_barn.spm": "Jeg er alene om omsorg for barn",
-    "step.når-kan-man-få-utbetalt-omsorgspenger.rett_til_mer_enn_ti_dager_totalt.spm": "Jeg har fått overført dager og rett til mer enn 10 dager totalt",
-    "step.når-kan-man-få-utbetalt-omsorgspenger.den_andre_forelderen_ikke_kan_ta_seg_av_barnet.spm": "Jeg har innvilget ekstra dager fordi den andre forelderen ikke kan ta seg av barnet",
-    "step.når-kan-man-få-utbetalt-omsorgspenger.har_barn_som_har_kronisk_sykdom_eller_funksjonshemming.spm": "Jeg har innvilget ekstra dager fordi jeg har barn som har kronisk sykdom/funksjonshemming",
+    "step.hva-er-din-situasjon.pageTitle": "Hva er din situasjon?",
+    "step.hva-er-din-situasjon.stepTitle": "Hva er din situasjon?",
+    "step.hva-er-din-situasjon.stepIndicatorLabel": "Hva er din situasjon?",
+    "step.hva-er-din-situasjon.counsellorpanel.content": "For å kunne få utbetalt omsorgspenger fra NAV må du totalt ha rett til mer enn 10 dager i kalenderåret",
+    "step.hva-er-din-situasjon.tre_eller_fler_barn.spm": "Jeg har 3 eller flere barn",
+    "step.hva-er-din-situasjon.alene_om_omsorg_for_barn.spm": "Jeg er alene om omsorg for barn",
+    "step.hva-er-din-situasjon.rett_til_mer_enn_ti_dager_totalt.spm": "Jeg har fått overført dager og rett til mer enn 10 dager totalt",
+    "step.hva-er-din-situasjon.den_andre_forelderen_ikke_kan_ta_seg_av_barnet.spm": "Jeg har innvilget ekstra dager fordi den andre forelderen ikke kan ta seg av barnet",
+    "step.hva-er-din-situasjon.har_barn_som_har_kronisk_sykdom_eller_funksjonshemming.spm": "Jeg har innvilget ekstra dager fordi jeg har barn som har kronisk sykdom/funksjonshemming",
 
     "step.har-utbetalt-de-første-ti-dagene.pageTitle": "De første 10 dagene",
     "step.har-utbetalt-de-første-ti-dagene.stepTitle": "Har du utbetalt 10 dager for deg selv i dette kalenderåret?",
