--- a/src/app/i18n/nn.json
+++ b/src/app/i18n/nn.json
@@ -58,14 +58,14 @@
     "step.sendButtonLabel": "Send inn søknaden",
     "step.sendButtonAriaLabel": "Send inn søknaden",
 
-    "step.når-kan-man-få-utbetalt-omsorgspenger.pageTitle": "TODOO",
-    "step.når-kan-man-få-utbetalt-omsorgspenger.stepTitle": "TODO",
-    "step.når-kan-man-få-utbetalt-omsorgspenger.stepIndicatorLabel": "TODO",
-    "step.når-kan-man-få-utbetalt-omsorgspenger.tre_eller_fler_barn.spm": "Jeg har 3 eller flere barn",
-    "step.når-kan-man-få-utbetalt-omsorgspenger.alene_om_omsorg_for_barn.spm": "Jeg er alene om omsorg for barn",
-    "step.når-kan-man-få-utbetalt-omsorgspenger.rett_til_mer_enn_ti_dager_totalt.spm": "Jeg har fått overført dager og rett til mer enn 10 dager totalt",
-    "step.når-kan-man-få-utbetalt-omsorgspenger.den_andre_forelderen_ikke_kan_ta_seg_av_barnet.spm": "Jeg har innvilget ekstra dager fordi den andre forelderen ikke kan ta seg av barnet",
-    "step.når-kan-man-få-utbetalt-omsorgspenger.har_barn_som_har_kronisk_sykdom_eller_funksjonshemming.spm": "Jeg har innvilget ekstra dager fordi jeg har barn som har kronisk sykdom/funksjonshemming",
+    "step.hva-er-din-situasjon.pageTitle": "TODOO",
+    "step.hva-er-din-situasjon.stepTitle": "TODO",
+    "step.hva-er-din-situasjon.stepIndicatorLabel": "TODO",
+    "step.hva-er-din-situasjon.tre_eller_fler_barn.spm": "Jeg har 3 eller flere barn",
+    "step.hva-er-din-situasjon.alene_om_omsorg_for_barn.spm": "Jeg er alene om omsorg for barn",
+    "step.hva-er-din-situasjon.rett_til_mer_enn_ti_dager_totalt.spm": "Jeg har fått overført dager og rett til mer enn 10 dager totalt",
+    "step.hva-er-din-situasjon.den_andre_forelderen_ikke_kan_ta_seg_av_barnet.spm": "Jeg har innvilget ekstra dager fordi den andre forelderen ikke kan ta seg av barnet",
+    "step.hva-er-din-situasjon.har_barn_som_har_kronisk_sykdom_eller_funksjonshemming.spm": "Jeg har innvilget ekstra dager fordi jeg har barn som har kronisk sykdom/funksjonshemming",
 
     "step.har-utbetalt-de-første-ti-dagene.pageTitle": "TODO",
     "step.har-utbetalt-de-første-ti-dagene.stepTitle": "Har du utbetalt 10 dager for deg selv i dette kalenderåret?",
