Forenkle steg id

--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -58,22 +58,22 @@
     "step.sendButtonLabel": "Send inn søknaden",
     "step.sendButtonAriaLabel": "Send inn søknaden",
 
-    "step.hva-er-din-situasjon.pageTitle": "Hva er din situasjon?",
-    "step.hva-er-din-situasjon.stepTitle": "Hva er din situasjon?",
-    "step.hva-er-din-situasjon.stepIndicatorLabel": "Hva er din situasjon?",
-    "step.hva-er-din-situasjon.counsellorpanel.content": "For å kunne få utbetalt omsorgspenger fra NAV må du totalt ha rett til mer enn 10 dager i kalenderåret",
-    "step.hva-er-din-situasjon.tre_eller_fler_barn.spm": "Jeg har 3 eller flere barn",
-    "step.hva-er-din-situasjon.alene_om_omsorg_for_barn.spm": "Jeg er alene om omsorg for barn",
-    "step.hva-er-din-situasjon.rett_til_mer_enn_ti_dager_totalt.spm": "Jeg har fått overført dager og rett til mer enn 10 dager totalt",
-    "step.hva-er-din-situasjon.den_andre_forelderen_ikke_kan_ta_seg_av_barnet.spm": "Jeg har innvilget ekstra dager fordi den andre forelderen ikke kan ta seg av barnet",
-    "step.hva-er-din-situasjon.har_barn_som_har_kronisk_sykdom_eller_funksjonshemming.spm": "Jeg har innvilget ekstra dager fordi jeg har barn som har kronisk sykdom/funksjonshemming",
+    "step.situasjon.pageTitle": "Hva er din situasjon?",
+    "step.situasjon.stepTitle": "Hva er din situasjon?",
+    "step.situasjon.stepIndicatorLabel": "Hva er din situasjon?",
+    "step.situasjon.counsellorpanel.content": "For å kunne få utbetalt omsorgspenger fra NAV må du totalt ha rett til mer enn 10 dager i kalenderåret",
+    "step.situasjon.tre_eller_fler_barn.spm": "Jeg har 3 eller flere barn",
+    "step.situasjon.alene_om_omsorg_for_barn.spm": "Jeg er alene om omsorg for barn",
+    "step.situasjon.rett_til_mer_enn_ti_dager_totalt.spm": "Jeg har fått overført dager og rett til mer enn 10 dager totalt",
+    "step.situasjon.den_andre_forelderen_ikke_kan_ta_seg_av_barnet.spm": "Jeg har innvilget ekstra dager fordi den andre forelderen ikke kan ta seg av barnet",
+    "step.situasjon.har_barn_som_har_kronisk_sykdom_eller_funksjonshemming.spm": "Jeg har innvilget ekstra dager fordi jeg har barn som har kronisk sykdom/funksjonshemming",
 
-    "step.har-utbetalt-de-første-ti-dagene.pageTitle": "De første 10 dagene",
-    "step.har-utbetalt-de-første-ti-dagene.stepTitle": "Har du utbetalt 10 dager for deg selv i dette kalenderåret?",
-    "step.har-utbetalt-de-første-ti-dagene.stepIndicatorLabel": "De første 10 dagene",
-    "step.har-utbetalt-de-første-ti-dagene.counsellorpanel.content": "I de fleste tilfeller må man som selvstendig næringsdrivende og frilanser betale de 10 første dager med omsorgspenger i året selv.",
+    "step.egenutbetaling.pageTitle": "De første 10 dagene",
+    "step.egenutbetaling.stepTitle": "Har du utbetalt 10 dager for deg selv i dette kalenderåret?",
+    "step.egenutbetaling.stepIndicatorLabel": "De første 10 dagene",
+    "step.egenutbetaling.counsellorpanel.content": "I de fleste tilfeller må man som selvstendig næringsdrivende og frilanser betale de 10 første dager med omsorgspenger i året selv.",
 
-    "step.har-utbetalt-de-første-ti-dagene.ja_nei_spm.legend": "Har du utbetalt 10 dager for deg selv i dette kalenderåret?",
+    "step.egenutbetaling.ja_nei_spm.legend": "Har du utbetalt 10 dager for deg selv i dette kalenderåret?",
 
     "step.har_utbetalt_de_første_ti_dagene.innvilget_rett_og_ingen_andre_barn_under_tolv.spm": "Jeg har innvilget utvidet rett for et kronisk sykt barn/funksjonshemmet og har ingen andre barn under 12 år",
     "step.har_utbetalt_de_første_ti_dagene.fisker_på_blad_B.spm": "Jeg er fisker på blad B",
