--- a/src/app/i18n/nn.json
+++ b/src/app/i18n/nn.json
@@ -58,19 +58,19 @@
     "step.sendButtonLabel": "Send inn søknaden",
     "step.sendButtonAriaLabel": "Send inn søknaden",
 
-    "step.hva-er-din-situasjon.pageTitle": "TODOO",
-    "step.hva-er-din-situasjon.stepTitle": "TODO",
-    "step.hva-er-din-situasjon.stepIndicatorLabel": "TODO",
-    "step.hva-er-din-situasjon.tre_eller_fler_barn.spm": "Jeg har 3 eller flere barn",
-    "step.hva-er-din-situasjon.alene_om_omsorg_for_barn.spm": "Jeg er alene om omsorg for barn",
-    "step.hva-er-din-situasjon.rett_til_mer_enn_ti_dager_totalt.spm": "Jeg har fått overført dager og rett til mer enn 10 dager totalt",
-    "step.hva-er-din-situasjon.den_andre_forelderen_ikke_kan_ta_seg_av_barnet.spm": "Jeg har innvilget ekstra dager fordi den andre forelderen ikke kan ta seg av barnet",
-    "step.hva-er-din-situasjon.har_barn_som_har_kronisk_sykdom_eller_funksjonshemming.spm": "Jeg har innvilget ekstra dager fordi jeg har barn som har kronisk sykdom/funksjonshemming",
+    "step.situasjon.pageTitle": "TODOO",
+    "step.situasjon.stepTitle": "TODO",
+    "step.situasjon.stepIndicatorLabel": "TODO",
+    "step.situasjon.tre_eller_fler_barn.spm": "Jeg har 3 eller flere barn",
+    "step.situasjon.alene_om_omsorg_for_barn.spm": "Jeg er alene om omsorg for barn",
+    "step.situasjon.rett_til_mer_enn_ti_dager_totalt.spm": "Jeg har fått overført dager og rett til mer enn 10 dager totalt",
+    "step.situasjon.den_andre_forelderen_ikke_kan_ta_seg_av_barnet.spm": "Jeg har innvilget ekstra dager fordi den andre forelderen ikke kan ta seg av barnet",
+    "step.situasjon.har_barn_som_har_kronisk_sykdom_eller_funksjonshemming.spm": "Jeg har innvilget ekstra dager fordi jeg har barn som har kronisk sykdom/funksjonshemming",
 
-    "step.har-utbetalt-de-første-ti-dagene.pageTitle": "TODO",
-    "step.har-utbetalt-de-første-ti-dagene.stepTitle": "Har du utbetalt 10 dager for deg selv i dette kalenderåret?",
-    "step.har-utbetalt-de-første-ti-dagene.stepIndicatorLabel": "TODO",
-    "step.har-utbetalt-de-første-ti-dagene.counsellorpanel.content": "I de fleste tilfeller må man som selvstendig næringsdrivende og frilanser betale de 10 første dager med omsorgspenger i året selv.",
+    "step.egenutbetaling.pageTitle": "TODO",
+    "step.egenutbetaling.stepTitle": "Har du utbetalt 10 dager for deg selv i dette kalenderåret?",
+    "step.egenutbetaling.stepIndicatorLabel": "TODO",
+    "step.egenutbetaling.counsellorpanel.content": "I de fleste tilfeller må man som selvstendig næringsdrivende og frilanser betale de 10 første dager med omsorgspenger i året selv.",
 
     "step.opplysninger-om-barnet.pageTitle": "Omsorgspengesøknad - opplysninger om barnet",
     "step.opplysninger-om-barnet.stepTitle": "Barn",
