--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -61,35 +61,35 @@
     "step.situasjon.pageTitle": "Hva er din situasjon?",
     "step.situasjon.stepTitle": "Hva er din situasjon?",
     "step.situasjon.stepIndicatorLabel": "Hva er din situasjon?",
-    "step.situasjon.counsellorpanel.content": "For å kunne få utbetalt omsorgspenger fra NAV må du totalt ha rett til mer enn 10 dager i kalenderåret",
+    "step.situasjon.counsellorpanel.content": "For å kunne få utbetalt omsorgspenger fra NAV må du totalt ha rett til mer enn 3 dager i kalenderåret",
     "step.situasjon.tre_eller_fler_barn.spm": "Jeg har 3 eller flere barn",
     "step.situasjon.alene_om_omsorg_for_barn.spm": "Jeg er alene om omsorg for barn",
-    "step.situasjon.rett_til_mer_enn_ti_dager_totalt.spm": "Jeg har fått overført dager og rett til mer enn 10 dager totalt",
+    "step.situasjon.rett_til_mer_enn_ti_dager_totalt.spm": "Jeg har fått overført dager og rett til mer enn 3 dager totalt",
     "step.situasjon.den_andre_forelderen_ikke_kan_ta_seg_av_barnet.spm": "Jeg har innvilget ekstra dager fordi den andre forelderen ikke kan ta seg av barnet",
     "step.situasjon.har_barn_som_har_kronisk_sykdom_eller_funksjonshemming.spm": "Jeg har innvilget ekstra dager fordi jeg har barn som har kronisk sykdom/funksjonshemming",
 
-    "step.egenutbetaling.pageTitle": "De første 10 dagene",
-    "step.egenutbetaling.stepTitle": "Har du utbetalt 10 dager for deg selv i dette kalenderåret?",
-    "step.egenutbetaling.stepIndicatorLabel": "De første 10 dagene",
-    "step.egenutbetaling.counsellorpanel.content": "I de fleste tilfeller må man som selvstendig næringsdrivende og frilanser betale de 10 første dager med omsorgspenger i året selv.",
+    "step.egenutbetaling.pageTitle": "De første 3 dagene",
+    "step.egenutbetaling.stepTitle": "Har du utbetalt 3 dager for deg selv i dette kalenderåret?",
+    "step.egenutbetaling.stepIndicatorLabel": "De første 3 dagene",
+    "step.egenutbetaling.counsellorpanel.content": "Som selvstendig næringsdrivende eller frilanser må du som hovedregel dekke de 3 første omsorgsdagene selv.",
 
-    "step.egenutbetaling.ja_nei_spm.legend": "Har du utbetalt 10 dager for deg selv i dette kalenderåret?",
+    "step.egenutbetaling.ja_nei_spm.legend": "Har du utbetalt minst 3 omsorgsdager til deg selv i år?",
 
-    "step.har_utbetalt_de_første_ti_dagene.innvilget_utvidet_rett.spm": "Jeg har innvilget utvidet rett for et kronisk sykt barn/funksjonshemmet",
-    "step.har_utbetalt_de_første_ti_dagene.ingen_andre_barn_under_tolv.spm": "Jeg har ingen andre barn under 12 år",
+    "step.har_utbetalt_de_første_ti_dagene.innvilget_utvidet_rett.spm": "Jeg har innvilget ekstra dager for et barn som er sykt eller funksjonshemmet.",
+    "step.har_utbetalt_de_første_ti_dagene.ingen_andre_barn_under_tolv.spm": "Har du andre barn under 12 år i husstanden din?",
     "step.har_utbetalt_de_første_ti_dagene.fisker_på_blad_B.spm": "Jeg er fisker på blad B",
-    "step.har_utbetalt_de_første_ti_dagene.frivillig_forsikring.spm": "Jeg har frivillig forsikring for tilleggssykepenger fra 1. dag",
-    "step.har_utbetalt_de_første_ti_dagene.nettop_startet_selvstendig_frilanser.spm": "Jeg har nettopp startet å jobbe som selvstendig/frilanser og jobbet under 4 uker",
+    "step.har_utbetalt_de_første_ti_dagene.frivillig_forsikring.spm": "Jeg har frivillig forsikring for tilleggssykepenger som gjelder fra 1. dag",
+    "step.har_utbetalt_de_første_ti_dagene.nettop_startet_selvstendig_frilanser.spm": "Jeg har jobbet som selvstendig næringsdrivende/frilanser i mindre enn 4 uker",
 
-    "step.periode.pageTitle": "Spesifisering av dager og tidspunkter",
-    "step.periode.stepTitle": "Hvilke dager søker du om utbetaling for?",
-    "step.periode.stepIndicatorLabel": "Spesifisering av dager og tidspunkter",
+    "step.periode.pageTitle": "Hvilke dager søker du utbetaling for?",
+    "step.periode.stepTitle": "Hvilke dager søker du utbetaling for?",
+    "step.periode.stepIndicatorLabel": "Hvilke dager søker du utbetaling for?",
     "step.periode.counsellorpanel.content": "I de fleste tilfeller må man som selvstendig næringsdrivende og frilanser betale de 10 første dager med omsorgspenger i året selv.",
     "step.periode.dager_med_fullt_fravært.label": "Dager med fullt fravær",
     "step.periode.dager_med_fullt_fravært.info": "TODO",
     "step.periode.dager_med_delvis_fravært.label": "Dager med delvis fravær",
     "step.periode.dager_med_delvis_fravært.info": "TODO",
-    "step.periode.har_dy_oppholdt_deg_i_utlandet_for_dager_du_soker_ok.spm": "Har du oppholdt deg i utlandet i noen av dagene du søker om utbetaling for?",
+    "step.periode.har_du_oppholdt_deg_i_utlandet_for_dager_du_soker_ok.spm": "Har du vært i utlandet noen av dagene du søker omsorgspenger for?",
 
     "step.hvis-utenlandsopphold.pageTitle": "Opphold i utlandet",
     "step.hvis-utenlandsopphold.stepTitle": "Spesifiser hvilke perioder du har oppholdt deg i utlandet",
@@ -235,7 +235,7 @@
     "steg.oppsummering.bekrefterOpplysninger.ikkeBekreftet": "Du må bekrefte opplysningene",
 
     "page.confirmation.sidetittel": "Vi har mottatt søknaden din",
-    "page.confirmation.tittel": "Vi har mottatt søknad fra deg om omsorgspenger",
+    "page.confirmation.tittel": "Vi har mottatt søknad fra deg om utbetaling av omsorgspenger",
     "page.confirmation.undertittel": "Hva skjer videre nå?",
     "page.confirmation.hvaSkjer1": "Søknaden din vil bli synlig på Ditt NAV etter omkring en uke. Da vil du også kunne se hva slags dokumentasjon vi har fått fra deg.",
     "page.confirmation.hvaSkjer2": "Vi starter behandlingen av søknaden din når vi har mottatt all nødvendig dokumentasjon. Vi kontakter deg hvis vi trenger flere opplysninger i saken din.",
