--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -75,7 +75,7 @@
 
     "step.egenutbetaling.ja_nei_spm.legend": "Har du utbetalt minst 3 omsorgsdager til deg selv i år?",
 
-    "step.har_utbetalt_de_første_ti_dagene.innvilget_utvidet_rett.spm": "Jeg har innvilget ekstra dager for et barn som er sykt eller funksjonshemmet.",
+    "step.har_utbetalt_de_første_ti_dagene.innvilget_utvidet_rett.spm": "Jeg er innvilget ekstra dager for barn som er sykt eller funksjonshemmet",
     "step.har_utbetalt_de_første_ti_dagene.ingen_andre_barn_under_tolv.spm": "Har du andre barn under 12 år i husstanden din?",
     "step.har_utbetalt_de_første_ti_dagene.fisker_på_blad_B.spm": "Jeg er fisker på blad B",
     "step.har_utbetalt_de_første_ti_dagene.frivillig_forsikring.spm": "Jeg har frivillig forsikring for tilleggssykepenger som gjelder fra 1. dag",
