--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -68,9 +68,9 @@
     "step.situasjon.den_andre_forelderen_ikke_kan_ta_seg_av_barnet.spm": "Jeg har innvilget ekstra dager fordi den andre forelderen ikke kan ta seg av barnet",
     "step.situasjon.har_barn_som_har_kronisk_sykdom_eller_funksjonshemming.spm": "Jeg har innvilget ekstra dager fordi jeg har barn som har kronisk sykdom/funksjonshemming",
 
-    "step.egenutbetaling.pageTitle": "De første 3 dagene",
-    "step.egenutbetaling.stepTitle": "Har du utbetalt 3 dager for deg selv i dette kalenderåret?",
-    "step.egenutbetaling.stepIndicatorLabel": "De første 3 dagene",
+    "step.egenutbetaling.pageTitle": "Omsorgsdager du dekker selv",
+    "step.egenutbetaling.stepTitle": "Omsorgsdager du dekker selv",
+    "step.egenutbetaling.stepIndicatorLabel": "Omsorgsdager du dekker selv",
     "step.egenutbetaling.counsellorpanel.content": "Som selvstendig næringsdrivende eller frilanser må du som hovedregel dekke de 3 første omsorgsdagene selv.",
 
     "step.egenutbetaling.ja_nei_spm.legend": "Har du utbetalt minst 3 omsorgsdager til deg selv i år?",
@@ -286,5 +286,20 @@
     "fieldvalidation.timer_ikke_tall": "Verdien må være mellom 0,5 og 7,5 timer",
     "fieldvalidation.timer_for_mange_timer": "Verdien må være mellom 0,5 og 7,5 timer",
     "fieldvalidation.dato_utenfor_gyldig_tidsrom": "Dato er utenfor gyldig tidsperiode",
-    "fieldvalidation.tom_er_før_fom": "Til dato kan ikke være før fra dato"
+    "fieldvalidation.tom_er_før_fom": "Til dato kan ikke være før fra dato",
+
+    "avbrytSøknadDialog.avbrytSøknadLabel": "Ja, avbryt søknad",
+    "avbrytSøknadDialog.fortsettSøknadLabel": "Nei",
+    "avbrytSøknadDialog.intro": "Det du har fylt ut i søknaden blir slettet, og du kommer tilbake til velkomstsiden.",
+    "avbrytSøknadDialog.spørsmål": "Ønsker du å slette søknaden?",
+    "avbrytSøknadDialog.tittel": "Avbryt og slett søknad",
+
+    "fortsettSøknadSenereDialog.avbrytSøknadLabel": "Ja, fortsett senere",
+    "fortsettSøknadSenereDialog.fortsettSøknadLabel": "Nei",
+    "fortsettSøknadSenereDialog.intro": "Vi lagrer søknaden din for deg i 24 timer.",
+    "fortsettSøknadSenereDialog.spørsmål": "Vil du avslutte nå og fortsette senere?",
+    "fortsettSøknadSenereDialog.tittel": "Avslutt og fortsett senere",
+
+    "steg.footer.avbryt": "Avbryt og slett søknad",
+    "steg.footer.fortsettSenere": "Avslutt og fortsett senere"
 }
