Validate days and periodes to find conflicts

--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -277,12 +277,14 @@
 
     "fieldvalidation.fraværsperioder_mangler": "Du har ikke lagt til dager med fullt fravær",
     "fieldvalidation.fraværsperioder_overlapper": "Ett eller flere av periodene har datoer som overlapper",
-    "fieldvalidation.fraværsperioder_utenfor_periode": "Ett eller flere av periodene er utenfor tillatt tidsrom",
+    "fieldvalidation.fraværsperioder_utenfor_periode": "En eller flere av periodene er utenfor tillatt tidsrom",
+    "fieldvalidation.fraværsperioder_overlapper_med_fraværsdager": "En eller flere perioder overlapper med registrerte dager med delvis fravær",
     "fieldvalidation.dager_med_fravær_ugyldig_dag": "En eller flere av dagene har ugyldige verdier",
     "fieldvalidation.dager_med_fravær_mangler": "Du har ikke lagt til dager med delvis fravær",
     "fieldvalidation.dager_med_fravær_like": "En eller flere dager har samme dato",
     "fieldvalidation.dager_med_for_mange_timer": "En eller flere dager har for mange timer. 7,5 timer er det meste som er gyldig",
     "fieldvalidation.dager_med_fravær_utenfor_periode": "En eller flere dager er utenfor gyldig tidsperiode",
+    "fieldvalidation.dager_med_fravær_overlapper_perioder": "En eller flere dager overlapper med registrerte perioder",
     "fieldvalidation.timer_ikke_tall": "Verdien må være mellom 0,5 og 7,5 timer",
     "fieldvalidation.timer_for_mange_timer": "Verdien må være mellom 0,5 og 7,5 timer",
     "fieldvalidation.dato_utenfor_gyldig_tidsrom": "Dato er utenfor gyldig tidsperiode",
