Textupdate egenutbetaling 3 dager

--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -73,7 +73,7 @@
     "step.egenutbetaling.stepIndicatorLabel": "Omsorgsdager du dekker selv",
     "step.egenutbetaling.counsellorpanel.content": "Som selvstendig næringsdrivende eller frilanser må du som hovedregel dekke de 3 første omsorgsdagene selv.",
 
-    "step.egenutbetaling.ja_nei_spm.legend": "Har du utbetalt minst 3 omsorgsdager til deg selv i år?",
+    "step.egenutbetaling.ja_nei_spm.legend": "Har du hatt 3 omsorgsdager i år, som du har dekket selv?",
 
     "step.har_utbetalt_de_første_ti_dagene.innvilget_utvidet_rett.spm": "Jeg er innvilget ekstra dager for barn som er sykt eller funksjonshemmet",
     "step.har_utbetalt_de_første_ti_dagene.ingen_andre_barn_under_tolv.spm": "Har du andre barn under 12 år i husstanden din?",
